# muc-studentenwerk-cafeteria

./: README.md
cafeteria_engine/: .cproject  .project  CMakeLists.txt  README  TODO  cafeteriaengine.cpp  cafeteriaengine.h  cafeteriajob.cpp  cafeteriajob.h  cafeteriamenucache.cpp  cafeteriamenucache.h  cafeteriamenusource.cpp  cafeteriamenusource.h  config.h  locationsource.cpp  locationsource.h  plasma-engine-cafeteria.desktop  xmldataparser.cpp  xmldataparser.h
cafeteria_engine/po/: de.po
cafeteria_plasmoid/: .cproject  .project  CMakeLists.txt  README  cafeteriaplasmoid.cpp  cafeteriaplasmoid.h  configuration.ui  extract-messages.sh  infopanel.cpp  infopanel.h  plasma-applet-cafeteria.desktop
cafeteria_plasmoid/po/: de.po
web/: cafeteriamenu-xml.php  index.php  mensafood.php  mensen.inc.php  menu-rss.php
